1. axios instance logout handelling fixes 2. changes in refreshand access tocken and also added delete cookie func 3. shipping address invalidate query fix attempt 4

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -293,7 +293,7 @@ jobs:
     
     steps:
       - name: Deploy to VM via SSH
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@post_cicd
         with:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
