--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -293,7 +293,7 @@ jobs:
     
     steps:
       - name: Deploy to VM via SSH
-        uses: appleboy/ssh-action@post_cicd
+        uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.VM_HOST }}
           username: ${{ secrets.VM_USER }}
